--- a/es4/es4.css
+++ b/es4/es4.css
@@ -1,11 +1,21 @@
-section{
-    display:flex;
-    flex-direction: row;
+*{
+    color: white;
+    background-color: rgba(133, 106, 106, 0.705);
 }
-.links{
+main{
+    border: 2px solid aqua;
+    display:flex;
+    flex-direction: column;
+    width: 200px;
+    height: 100ch;
+    align-items: flex-start;
+}
+a{
     color: #2b2b2b;
     list-style: none;
+    text-decoration: none;
 }
-.liks:hover{
+a:hover{
     color: #2b2bb2;
+    transition: 0.3s;
 }
