--- a/es8/es8.css
+++ b/es8/es8.css
@@ -1,4 +1,28 @@
 div{
     display:flex;
-    
+    flex-direction: row;
+    justify-content: space-around;
+}
+card{
+    border: 3px solid black;
+    border-radius: 6px;
+}
+img{
+    width: 300px;
+    height: 200px;
+}
+@media(max-width: 375px){
+    div{
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: wrap;
+
+    }  
+}   
+@media(max-width:768px){
+    div{
+        flex-direction: row;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+    }
 }
